2013-03-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/math_ldbl.h (ldbl_pack): Rename to
	default_ldbl_pack and using as default implementation.
	(ldbl_unpack): Rename to default_ldbl_unpack and using as default
	implementation.
	* sysdeps/powerpc/fpu/math_ldbl.h (ldbl_extract_mantissa): Remove
	redundant definition.
	(ldbl_insert_mantissa): Likewise.
	(ldbl_canonicalize): Likewise.
	(ldbl_nearbyint): Likewise.
	(ldbl_pack): Rename to ldbl_pack_ppc.
	(ldbl_unpack): Rename to ldbl_unpack_ppc.
	* sysdeps/unix/sysv/linux/powerpc/Implies: Remove file.
	* sysdeps/powerpc/Implies: Add ieee754/ldbl-opt after ieee754/ldbl-128ibm.

2013-03-08  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/powerpc/powerpc32/power4/fpu/mpa.c: Move file...
	* sysdeps/powerpc/power4/fpu/mpa.c: ... here.
	* sysdeps/powerpc/powerpc32/power4/fpu/Makefile: Move file...
	* sysdeps/powerpc/power4/fpu/Makefile: ... here.
	* sysdeps/powerpc/powerpc64/power4/fpu/mpa.c: Remove file.
	* sysdeps/powerpc/powerpc64/power4/fpu/Makefile: Remove file.
	* sysdeps/powerpc/powerpc32/power4/Implies: New file.
	* sysdeps/powerpc/powerpc64/power4/Implies: New file.

2013-02-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com> 

	[BZ #15055] 
	* sysdeps/ieee754/ldbl-128ibm/e_acoshl.c (__ieee754_acoshl): Use 
	__ieee754_sqrl instead of __sqrl. 

2013-01-18  Anton Blanchard  <anton@samba.org>
	    Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/init-first.c: Rename
	__kernel_vdso_get_tbfreq to __kernel_get_tbfreq.
	* sysdeps/unix/sysv/linux/powerpc/get_clockfreq.c: Add parameter to
	INTERNAL_VSYSCALL_NO_SYSCALL_FALLBACK to specify return type.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h
	(INTERNAL_VSYSCALL_NCS): Change "=&r" in inline asm output regs list to
	"+r" and remove output regs list as redundant.  Add explicit inline
	asm to specify register of return val to work around compiler codegen